# shin-bucket-deployment

./: .gitignore  AGENTS.md  LICENSE  NOTICE  README.md  SECURITY.md  biome.json  mise.toml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.build.json  tsconfig.json  tsconfig.package.json  vitest.config.ts
.codex/reference/: bucket-deployment-custom-construct-analysis.md  bucket-deployment-rust-redesign-notes.md  bucket-deployment-validation-status.md  current-state.md  deployment-time-optimization-roadmap.md  origin.md
.github/: dependabot.yml
.github/workflows/: aws-benchmark.yml  aws-verification.yml  checks.yml  ci.yml  release.yml
benchmarks/: README.md  ci-report.md  ci-telemetry.md  results.jsonl  results.md  run-assets-comparison.ts  telemetry.md
benchmarks/apps/: assets-app.ts
benchmarks/configs/: large-few-source-window-diagnostic-1024-32.json  marker-replacement-2048-32.json  memory-planning-1024-32.json  methodology-v2-1024-32.json  schema.json  shin-aws-2048-32-4096-64.json  shin-aws-2048-32-4096-64.jsonc  shin-aws-2048-64-4096-128.json  shin-aws-2048-64-4096-128.jsonc  shin-aws-5120-256-6144-256.json  shin-aws-5120-256-6144-256.jsonc  tiny-many-shin-aws-2048-4096.json  transfer-scheduler-2048-32.json
benchmarks/infra/: gha-oidc-app.ts  gha-oidc-stack.ts
benchmarks/src/: aggregate.ts  assets.ts  (+15 more)
docs/: architecture.md  benchmark-chart-previews.md  benchmark-history.jsonl  benchmark.md  benchmarking.md  building-from-source.md  checksum-strategy.md  engine-transition.md  examples.md  lambda-workflow.md  migration.md  s3-unspool-comparison.md  s3-unspool-parity.md  validation.md  verification-history.jsonl  verification.md
examples/: benchmark-assets-app.ts  cloudfront-invalidation-app.ts  cloudfront-invalidation-async-app.ts  cloudfront-invalidation-sync-app.ts  controls-matrix-app.ts  extract-false-app.ts  kms-destination-app.ts  large-archive-app.ts  metadata-filters-app.ts  multi-source-overwrite-app.ts  prune-cycle-v1-app.ts  prune-cycle-v2-app.ts  prune-update-v1-app.ts  prune-update-v2-app.ts  replacement-behavior-app.ts  replacement-matrix-app.ts  retain-cycle-v1-app.ts  retain-cycle-v2-app.ts  retain-on-delete-false-bucket-only-app.ts  retain-on-delete-false-v1-app.ts  retain-on-delete-false-v2-app.ts  retain-on-delete-v1-app.ts  retain-on-delete-v2-app.ts  simple-app.ts  token-replacement-app.ts
rust/: Cargo.toml  deny.toml
rust/src/: cloudformation.rs  cloudfront.rs  deadline.rs  deploy.rs  lifecycle.rs  main.rs  replace.rs  request.rs  s3.rs  types.rs
rust/src/cloudformation/: callback.rs
rust/src/s3/: archive.rs  content_type.rs  destination.rs  manifest.rs  metadata.rs  mod.rs  planner.rs  transfer.rs
rust/src/s3/archive/: directory.rs  entry.rs
rust/src/s3/transfer/: scheduler.rs
rust/test-fixtures/external-zips/: README.md  info-zip.zip.b64  python-force-zip64.zip.b64
scenarios/: README.md  arguments.ts  catalog.ts  execute.ts  plan.ts  runner.ts  types.ts
scripts/: actionlint-parallel.mjs  actionlint-parallel.test.mjs  benchmark-assets.ts  build-bootstrap.mjs  collect-benchmark-results.ts  example-runner.ts  publish-package.mjs  publish-package.test.mjs  render-benchmark-report.ts  source-identity.mjs  source-identity.test.mjs  verify-benchmark-plan.mjs  verify-benchmark-synth.mjs  verify-package.mjs  verify-typescript-refactor.mjs
src/: cargo-bucket-deployment.ts  cataloged-source.ts  defaults.ts  destination-prefix.ts  destination.ts  enums.ts  errors.ts  iam.ts  index.ts  provider.ts  rust-bucket-deployment.ts  shin-bucket-deployment.ts  source-config.ts  stable-json.ts  validation.ts
test/: benchmark-collector.test.ts  cargo-bucket-deployment.test.ts  construct-validation.test.ts  destination-move-matrix-verifier.test.ts  replacement-paths.test.ts  rust-bucket-deployment.test.ts  scenario-arguments.test.ts  scenario-execute.test.ts  scenario-plan.test.ts  scenario-verifiers.test.ts  shin-bucket-deployment.test.ts  test-bundling.ts  token-replacement.test.ts
(+85 files in other folders)
