[package]
name = "rust-bucket-deployment-handler"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "rust-bucket-deployment-handler"
path = "src/main.rs"

[dependencies]
anyhow = "1"
aws-config = "1"
aws_lambda_events = { version = "0.16.1", default-features = false, features = ["cloudformation"] }
aws-sdk-cloudfront = "1"
aws-sdk-s3 = "1"
globset = "0.4"
lambda_runtime = "1.1.2"
mime_guess = "2"
reqwest = { version = "0.13.2", default-features = false, features = ["json", "rustls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
md-5 = "0.10"
tempfile = "3"
tokio = { version = "1", features = ["fs", "io-util", "macros", "rt-multi-thread", "sync", "time"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
urlencoding = "2"
uuid = { version = "1", features = ["v4"] }
zip = { version = "8.4.0", default-features = false, features = ["deflate", "deflate64"] }
