[package]
name = "rust-bucket-deployment-handler"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "rust-bucket-deployment-handler"
path = "src/main.rs"

[dependencies]
anyhow = "1"
async-compression = { version = "0.4", default-features = false, features = ["tokio", "deflate"] }
async_zip = { version = "0.0.18", features = ["tokio", "deflate"] }
aws-config = "1"
aws_lambda_events = { version = "0.16.1", default-features = false, features = ["cloudformation"] }
aws-sdk-cloudfront = "1"
aws-sdk-s3 = "1"
bytes = "1"
futures-util = "0.3"
globset = "0.4"
http-body = "1"
http-body-util = "0.1"
lambda_runtime = "1.1.2"
mime_guess = "2"
reqwest = { version = "0.13.2", default-features = false, features = ["json", "rustls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
md-5 = "0.10"
tokio = { version = "1", features = ["fs", "io-util", "macros", "rt-multi-thread", "sync", "time"] }
tokio-util = { version = "0.7", features = ["io"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
urlencoding = "2"
uuid = { version = "1", features = ["v4"] }
zip = { version = "8.4.0", default-features = false, features = ["deflate", "deflate64"] }
