[package]
name = "shin-bucket-deployment-handler"
version = "0.1.0"
edition = "2024"
license = "MIT"
publish = false

[[bin]]
name = "shin-bucket-deployment-handler"
path = "src/main.rs"

[dependencies]
anyhow = "1"
async-compression = { version = "0.4", default-features = false, features = [
  "tokio",
  "deflate",
] }
async_zip = { version = "0.0.18", features = ["tokio", "deflate"] }
aws-config = { version = "1", default-features = false, features = [
  "behavior-version-latest",
  "default-https-client",
  "rt-tokio",
] }
aws_lambda_events = { version = "1", default-features = false, features = [
  "cloudformation",
] }
aws-sdk-cloudfront = { version = "1", default-features = false, features = [
  "behavior-version-latest",
  "default-https-client",
  "rt-tokio",
] }
aws-sdk-s3 = { version = "1", default-features = false, features = [
  "behavior-version-latest",
  "default-https-client",
  "http-1x",
  "rt-tokio",
  "sigv4a",
] }
bytes = "1"
crc32fast = "1"
fastrand = "2"
futures-util = "0.3"
globset = "0.4"
http-body = "1"
lambda_runtime = "1"
md-5 = "0.11"
mime_guess = "2"
reqwest = { version = "0.13", default-features = false, features = [
  "json",
  "rustls",
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.11"
tokio = { version = "1", features = [
  "fs",
  "io-util",
  "macros",
  "rt-multi-thread",
  "sync",
  "time",
] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
urlencoding = "2"
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
tokio = { version = "1", features = ["test-util"] }
zip = { version = "8", default-features = false, features = [
  "deflate",
  "deflate64",
] }
